# outlook_skill

./: .env.example  .gitignore  AGENTS.md  README.md  basedpyrightconfig.json  pyproject.toml
docs/: prd.md  rfc.md  test.md  working.md
scripts/: outlook
skills/: skill_outlook.md
src/outlook_skill/: auth.py  calendar.py  cli.py  config.py  downloader.py  errors.py  exporter.py  graph_client.py  mail.py  markdown_renderer.py  models.py  replier.py  sender.py  spam_triage.py  store.py
tests/: test_auth.py  test_calendar.py  test_cli.py  test_config.py  test_exporter.py  test_graph_client.py  test_live_integration.py  test_mail.py  test_markdown_renderer.py  test_replier.py  test_sender.py  test_spam_triage.py  test_store.py
