[project]
name = "outlook-skill"
version = "0.1.0"
description = "AI-first local Microsoft Graph skill for Outlook.com"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "markdown>=3.6,<4",
    "markdownify>=0.13,<1",
    "msal>=1.30,<2",
    "python-dotenv>=1.0,<2",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
markers = [
    "live_integration: tests that hit the real Outlook.com Microsoft Graph APIs",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
